--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,33 @@ uuid = "3ae0db98-eead-4cfc-b6e3-b14ea8cd4962"
 version = "0.1.0"
 
 [deps]
+ArgCheck = "dce04be8-c92d-5529-be00-80e4d2c0e197"
+ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
+VariateTransformRules = "4f7d1279-d061-4f1b-979a-3871c22fff2d"
 
 [compat]
-julia = "1"
+ArgCheck = "1, 2"
+ArraysOfArrays = "0.5"
+ChainRulesCore = "0.9"
+Distributions = "0.23, 0.24, 0.25"
+FillArrays = "0.7, 0.8, 0.9, 0.10, 0.11"
+StatsBase = "0.32, 0.33"
+ValueShapes = "0.9"
+VariateTransformRules = "0.1"
+julia = "1.3"
 
 [extras]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["Test"]
+test = ["ForwardDiff", "LinearAlgebra", "Test", "Zygote"]
