--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ ArgCheck = "1, 2"
 ArraysOfArrays = "0.5"
 ChainRulesCore = "0.9, 1"
 Distributions = "0.23, 0.24, 0.25"
-FillArrays = "0.7, 0.8, 0.9, 0.10, 0.11"
+FillArrays = "0.7, 0.8, 0.9, 0.10, 0.11, 0.12, 0.13"
 StatsBase = "0.32, 0.33"
 ValueShapes = "0.10"
 VariateTransformations = "0.1"
